Fix(Styling): Global toolbar spacing
Fixed horizontal spacing for global toolbar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@ html, body {
     min-height: 100%;
     height: auto !important;
     width: 100% !important;
+    max-width: 1500px !important;
 
     -moz-box-shadow: 0 0 3px rgba(0, 0, 0, .1);
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .1);
